Few typos in notebooks and a bit of refactoring.

--- a/notebooks/nb_90_IntroOfflineRL.ipynb
+++ b/notebooks/nb_90_IntroOfflineRL.ipynb
@@ -273,7 +273,7 @@
    "source": [
     "Reinforcement learning algorithms mostly use online learning, which can be a challenge for their widespread adoption. RL involves continually learning from the environment by interacting with it based on the current policy and then using this learning to improve the policy.\n",
     "\n",
-    "<img src=\"_static/images/90_online_rl.png\" alt=\"Snow\" style=\"width:30%\">\n",
+    "<img src=\"_static/images/nb_90_online_RL_cycle.png\" alt=\"Snow\" style=\"width:30%\">\n",
     "<div class=\"slide title\"> Fig.1 Online RL cycle </div>\n",
     "\n",
     "**Online interaction isn't always practical or safe due to expensive or risky data collection, especially in fields like robotics and healthcare.**\n",
@@ -299,8 +299,6 @@
     "\n",
     "**Learning Robotic Manipulation Skills**: In robotics, we can use active RL for skill learning, but generalizing skills across different environments is challenging. Offline RL allows us to reuse previously collected data from various skills to accelerate learning of new skills. For example, making soup with onions and carrots can build on experiences with onions and meat or carrots and cucumbers, reducing the need for new data collection.\n",
     "\n",
-    "**Learning Goal-Directed Dialogue Policies**: Dialogue systems, like chatbots helping users make purchases, can be modeled as MDPs. Collecting data by interacting with real users can be costly. Offline data collection from humans is a more practical approach for training effective conversational agents.\n",
-    "\n",
     "**Autonomous Driving**: Training autonomous vehicles in real-world environments can be dangerous and costly. Offline RL can use data from past driving experiences to improve vehicle control and decision-making, making it safer and more efficient.\n",
     "\n",
     "**Energy Management**: Optimizing energy consumption in buildings or industrial processes can be a critical task. Offline RL can analyze historical energy usage data to develop efficient control strategies, reducing energy costs and environmental impact.\n",
@@ -318,11 +316,20 @@
    "source": [
     "## What is the problem to be solved and how does it differ from online RL?\n",
     "\n",
-    "The offline RL problem can be defined as a data-driven approach to the previously seen online RL methods. As before, the goal is to minimize the discounted expected reward.\n",
+    "The offline RL problem can be defined as a data-driven approach to the previously seen online RL methods. \n",
     "\n",
-    "However, as pictured in fig.2, while in online RL the cost function to minimized is $J (\\pi) = \\mathbb{E}_{\\tau \\sim \\pi(a|s)}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right]$, in **offline RL** it is modified to **use only the collected data from a behavior policy $\\pi_b$**, i.e.: $J (\\pi) = \\mathbb{E}_{\\tau \\sim D}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right]$, with the dataset, $D = \\{ \\tau_i, \\text{ i=1,..,n} \\}$, made of trajectory tuples $(s_i, a_i, r_i)$ as shown in fig. 2.\n",
+    "As before, the goal is to minimize the discounted expected reward. However, as pictured in fig.2, this is also one of the main difference between on-line and offline-rl. In **online RL**:\n",
     "\n",
-    "<img src=\"_static/images/90_offline_vs_online.png\" alt=\"Snow\" style=\"width:60%\">\n",
+    "$$\n",
+    "J (\\pi) = \\mathbb{E}_{\\tau \\sim \\pi(a|s)}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right]\n",
+    "$$\n",
+    "while in **offline RL**:\n",
+    "$$\n",
+    "J (\\pi) = \\mathbb{E}_{\\tau \\sim D}  \\left[ \\sum_{t = 0}^{\\infty} \\gamma^t r (s_t, a_t) \\right]\n",
+    "$$\n",
+    "with the dataset, $D = \\{ \\tau_i, i=1,..,n \\}$.\n",
+    "\n",
+    "<img src=\"_static/images/90_offline_vs_online.png\" alt=\"Snow\" style=\"width:50%\">\n",
     "<div class=\"slide title\"> Fig.2 Online vs. Offline RL </div>\n",
     "\n",
     "**The goal of offline RL is to derive an optimal or near-optimal policy directly from $D$ without requiring further interactions with the environment**."
@@ -336,14 +343,12 @@
     }
    },
    "source": [
-    "**Note that $D$ doesn't necessarily need to be related to the specific task at hand, but it should be sufficiently representative (i.e., containing high-reward regions of the problem). If $D$ is derived from data collected from unrelated tasks, we will need to design our own reward function, just as we did in the online RL setting.**\n",
-    "\n",
-    "\n",
     "<img src=\"_static/images/90_online_vs_offline.png\" alt=\"Snow\" style=\"width:80%;\">\n",
     "<div class=\"slide title\"> Fig.1 Online vs. Offline RL </div>\n",
     "\n",
+    "**Note that $D$ doesn't necessarily need to be related to the specific task at hand, but it should be sufficiently representative (i.e., containing high-reward regions of the problem). If $D$ is derived from data collected from unrelated tasks, we will need to design our own reward function, just as we did in the online RL setting.**\n",
     "\n",
-    "**The behavior policy, $\\pi_b$ or $\\pi_\\beta$ is usually a suboptimal policy, a random policy or provided by a human expert, or a mixture of them.**\n",
+    "**Notation: The behavior policy, $\\pi_b$ or $\\pi_\\beta$ is usually a suboptimal policy, a random policy or provided by a human expert, or a mixture of them.**\n",
     "\n",
     "As an example of a behavior policy ($\\pi_b$), when training a robot to navigate a room, $\\pi_b$ might involve rules like \"avoid obstacles,\" \"move forward,\" or \"stop.\" It could be operated manually by a human who controls the robot based on sensor data, such as lidar for collision detection, or it could be a combination of suboptimal policies."
    ]
@@ -358,15 +363,26 @@
    "source": [
     "## Offline RL vs supervised learning \n",
     "\n",
-    "But if the goal of offline RL is to derive an optimal policy from data, why not try a supervised learning approach to learn $\\pi(a|s)$? Is it a viable approach?\n",
-    "\n",
+    "But if the goal of offline RL is to derive an optimal policy from data, why not try a supervised learning approach to learn $\\pi(a|s)$? Is it a viable approach?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Yes, it is. This approach is called **Imitation Learning (IL).**\n",
     "\n",
     "**Main differences between IL and offline RL:**\n",
     "\n",
-    "**1 - In IL, the policy closely mirrors the behavior policy, while in offline RL, the aim is a superior policy, ideally close to the optimal one.**\n",
+    "**1 - In IL, the policy closely mirrors the behavior policy so the collected data is attached to the task you want to solve.**\n",
     "\n",
-    "**2 - In IL you don't need to create a reward function for your task**. Quite useful in situations where creating a reward function directly is not feasible, such as when training a self-driving vehicle."
+    "**2 - in offline RL, the aim is a superior policy, ideally close to the optimal one, and the data doesn't need to be related to the task to solve.** \n",
+    "\n",
+    "**3 - In IL you don't need to create a reward function for your task**. Quite useful in situations where creating a reward function directly is not feasible, such as when training a self-driving vehicle."
    ]
   },
   {
@@ -382,9 +398,9 @@
     "\n",
     "$$ D = \\{(s_0, a_0), (s_1, a_1), \\ldots, (s_T, a_T)\\} \\quad \\tag{Dataset} $$\n",
     "\n",
-    "$$\\text{where} \\quad \\pi_{\\theta^*}(s_t) \\text{ s.t. } \\theta^* = argmin_\\theta  L_{BC}(\\theta) \\tag{learned policy}$$\n",
+    "$$\\text{with} \\quad \\pi_{\\theta^*}(s_t) \\text{ s.t. } \\theta^* = argmin_\\theta  L_{BC}(\\theta) \\tag{learned policy}$$\n",
     "\n",
-    "$$\\text{with} \\quad L_{BC}(\\theta) = \\sum_{t=0}^T \\left(\\pi_\\theta(s_t) - a_t\\right)^2 \\tag{Cost function}$$\n",
+    "$$\\text{and} \\quad L_{BC}(\\theta) = \\sum_{t=0}^T \\left(\\pi_\\theta(s_t) - a_t\\right)^2 \\tag{Cost function}$$\n",
     "\n",
     "\n",
     "and, $\\pi_\\theta(s_t)$, typically a DNN. BC aims to minimize the discrepancy between the actions produced by the learned policy and the actions demonstrated by the expert."
@@ -415,7 +431,7 @@
     "\n",
     "One of the key distinction between online RL and offline RL/IL lies in their exploration capabilities. In online RL, we actively explore the state-action space, while offline RL/IL operates solely within a fixed dataset (denoted as $D$). Going \"out of distribution\" beyond this dataset in offline RL/IL can lead to severe issues.\n",
     "\n",
-    "<img src=\"_static/images/offline_RL.jpg\" alt=\"offline_rl\" style=\"height:400px;\">"
+    "<img src=\"_static/images/offline_RL.jpg\" alt=\"offline_rl\" style=\"width:60%;\">"
    ]
   },
   {
@@ -428,7 +444,7 @@
    "source": [
     "**Online RL involves interactive exploration to discover the highest-reward regions** by gathering environmental feedback. In contrast, **offline RL imposes strict limitations on exploration beyond the dataset. This constraint results in algorithms overestimating unknown areas and attempting to navigate beyond the dataset**, as illustrated in the figure below where the dataset doesn't fully represent high-reward regions.\n",
     "\n",
-    "<img src=\"_static/images/offline_RL_3.jpg\" alt=\"offline_rl_1\" style=\"height:400px;\">\n",
+    "<img src=\"_static/images/offline_RL_3.jpg\" alt=\"offline_rl_1\" style=\"width:50%;\">\n",
     "\n",
     "As shown in the figure above on the right, once you are out of distribution (o.o.d) (states $s$ and $s'$ in red), as you don't have any feedback it will be hard to come back to $D$, as the o.o.d errors will propagate. As we will see this is one of the main challenges of offline RL and there are different techniques to mitigate this wrong behavior. "
    ]
@@ -441,6 +457,21 @@
     }
    },
    "source": [
+    "TODO --> NEW slide here: If a data point $(s,a)$ is missing is it because it wasn't collected or because it is o.o.d. ? This situation doesn't happen in online RL.\n",
+    "\n",
+    "PLOT HERE!!!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**If you don't follow the explanation below, don't worry; just accept that once out of distribution (o.o.d.) occurs, it will be hard to return to in-distribution**\n",
+    "\n",
     "Let's try to get some intuition:\n",
     "\n",
     "Consider a cost function given by: $ c(s,a) = 0  \\text{ if } a = \\pi^\\beta(s)$, otherwise $c(s,a)=1$, where $\\pi^\\beta(s)$ represents the behavior policy.  Additionally, assume that $ \\pi_\\theta (a \\ne \\pi^\\beta(s) | s) \\le \\epsilon \\text{ for all } s \\in D_{\\text{train}} $ . The total error can then be estimated as:\n",
@@ -466,10 +497,12 @@
     }
    },
    "source": [
+    "**This is not a major issue in general but it is important to mention**:\n",
+    "\n",
     "**The o.o.d. issues are not the only distributional shift effect in offline RL**.\n",
     "After computing the optimal policy, it typically operates within a subset of the original dataset distribution, creating a distinct form of distributional shift (D' subset in green in the figure below). Evaluating a policy substantially different from the behavior policy reduces the effective sample size (from D to D'), resulting in increased variance in the estimates. In simpler terms, the limited number of data points may not accurately represent the true data distribution. \n",
     "\n",
-    "<img src=\"_static/images/offline_RL_2.jpg\" alt=\"offline_rl_2\" style=\"height:400px;\">"
+    "<img src=\"_static/images/offline_RL_2.jpg\" alt=\"offline_rl_2\" style=\"width:60%;\">"
    ]
   },
   {
@@ -610,7 +643,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "217.4px"
+    "width": "224.719px"
    },
    "toc_section_display": true,
    "toc_window_display": true
