--- a/notebooks/nb_93_imitation_learning.ipynb
+++ b/notebooks/nb_93_imitation_learning.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "This makes these algorithms appealing as, **you don't need to create a reward function for your task**.\n",
     "\n",
-    "We will begin with Behavioral Cloning (BC), as introduced earlier. Later, we will cover the well-known improvement DAGGER, and if time permits, Decision Transformers (DT)."
+    "We will begin with Behavioral Cloning (BC), as introduced earlier. Later, we will cover the well-known improvement DAgger (Dataset Aggregation), and if time permits, Decision Transformers (DT)."
    ]
   },
   {
@@ -470,7 +470,7 @@
    "source": [
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_suboptimal_initial_0_0_final_0_7\n",
     "DATA_SET_IDENTIFIER_I = \"_suboptimal_exercise_I_nb_93\"\n",
-    "NUM_STEPS_I = 500\n",
+    "NUM_STEPS_I = 1000\n",
     "\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.random\n",
     "DATA_SET_IDENTIFIER_II = \"_random_exercise_I_nb_93\"\n",
@@ -520,13 +520,9 @@
    "outputs": [],
    "source": [
     "offpolicy_rendering(\n",
-    "    env_or_env_name=ENV_NAME,\n",
+    "    env_or_env_name=env,\n",
     "    render_mode=render_mode,\n",
     "    behavior_policy_name=behavior_policy_selected.value,\n",
-    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
-    "    num_frames=100,\n",
-    "    fps=8.0,\n",
-    "    inline=True\n",
     ")"
    ]
   },
@@ -605,7 +601,8 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\")\n",
+    "new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", new_keys_for_state_action_count_plot=new_keys)\n",
     "snapshot_env(env)"
    ]
   },
@@ -656,8 +653,6 @@
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
-    "EXPLORATION_NOISE = True\n",
-    "SEED = None #1626\n",
     "\n",
     "# TrainedPolicyConfig is a handy object that will help us to deal with the policy configuration data.\n",
     "offline_policy_config = TrainedPolicyConfig(\n",
@@ -812,7 +807,7 @@
     "**b - Remove the obstacle and examine the state-action distribution. What do you observe? Can you explain it?.\n",
     "      What do you think would happen if you start the agent from a previously forbidden position?**\n",
     "      \n",
-    "**c -  Let's revisit Exercise I and see what happens if you increase the noise significantly, like to 40K-50K?**\n",
+    "**c -  Let's revisit Exercise I and see what happens if you increase the noise?**\n",
     "\n",
     "\n",
     "Hint: You can use a different ObstacleTypes.obst_free_8x8 in your configuration and change the initial state, like this:\n",
@@ -865,7 +860,7 @@
     "    env_or_env_name=env,\n",
     "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
     "    policy_model=policy,\n",
-    "    num_frames=1000,\n",
+    "    num_frames=100,\n",
     "    imitation_policy_sampling=False\n",
     ")"
    ]
@@ -908,7 +903,7 @@
     "\n",
     "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\")\n",
     "new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
-    "state_action_histogram(state_action_count_policy, title=\"State-Action policy distribution\")\n",
+    "state_action_histogram(state_action_count_policy, title=\"State-Action policy distribution\", new_keys_for_state_action_count_plot=new_keys)\n",
     "compare_state_action_histograms(state_action_count_data, state_action_count_policy)\n",
     "snapshot_env(env)"
    ]
@@ -1055,7 +1050,7 @@
     }
    },
    "source": [
-    "#### TORCS race simulator quick overview\n",
+    "#### TORCS race simulator environment quick overview\n",
     "\n",
     "TORCS (The Open Racing Car Simulator) is a free 3D car racing game made in C++ (it includes aerodynamics, wheel rotation, car damage, fuel, etc.)\n",
     "\n",
@@ -1129,13 +1124,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### STEP 2: Create Minari dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "**Visualize TORCS behavior policies**"
+    "**Select TORCS behavior policies and visualize them**"
    ]
   },
   {
@@ -1150,8 +1152,7 @@
    "source": [
     "policy_selected_to_visualize = widget_list([\n",
     "    BehaviorPolicyType.torcs_drunk_driver_policy, \n",
-    "    BehaviorPolicyType.torcs_expert_policy,\n",
-    "    BehaviorPolicyType.torcs_expert_policy_with_noise,\n",
+    "    BehaviorPolicyType.torcs_expert_policy\n",
     "])"
    ]
   },
@@ -1159,6 +1160,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1174,17 +1176,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### STEP 2: Create Minari dataset"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1195,10 +1186,9 @@
    "outputs": [],
    "source": [
     "# Configure the policy\n",
-    "#BEHAVIOR_POLICY = BehaviorPolicyType.torcs_drunk_driver_policy\n",
     "BEHAVIOR_POLICY = policy_selected_to_visualize.value\n",
     "DATA_SET_IDENTIFIER = \"torcs_suboptimal\"\n",
-    "NUM_STEPS = 6000\n",
+    "NUM_STEPS = 4000\n",
     "\n",
     "config_torcs_data_set = create_minari_datasets(\n",
     "    env_name=ENV_NAME,\n",
@@ -1218,7 +1208,7 @@
     }
    },
    "source": [
-    "#### STEP 3: feed dataset to replay buffer "
+    "#### STEP 3: Feed dataset to replay buffer "
    ]
   },
   {
@@ -1243,7 +1233,7 @@
     }
    },
    "source": [
-    "#### STEP 4-5: DAgger initialization phase\n",
+    "#### STEP 4-5: Select offline policy and training - DAgger initialization phase\n",
     "\n",
     "**Let's train a BC policy with the collected data** .\n",
     "\n",
@@ -1266,8 +1256,6 @@
     "NUM_EPOCHS = 5\n",
     "BATCH_SIZE = 128\n",
     "NUMBER_TEST_ENVS = 1 # number of environments to test the policy during training\n",
-    "EXPLORATION_NOISE = True\n",
-    "SEED = None  # 1626\n",
     "PERCENTAGE_DATA_PER_EPOCH = 1.0 # a fraction to doesn't use full buffer.\n",
     "DEVICE = \"cuda\" # change to cpu if not gpu available\n",
     "\n",
@@ -1288,6 +1276,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1338,7 +1327,7 @@
     "    render_mode=None,\n",
     "    policy_model=trained_bc_policy,\n",
     "    num_frames=NUM_STEPS,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1349,9 +1338,12 @@
     }
    },
    "source": [
-    "#### STEP 4-5: DAgger aggregation phase\n",
+    "#### STEP 4-5: Select offline policy and training - DAgger aggregation phase\n",
     "\n",
-    "**We will ask for expert advise and aggregate that information into our dataset**"
+    "**We will ask for expert advise and aggregate that information into our dataset**\n",
+    "\n",
+    "<img src=\"_static/images/93_DAGGER.jpg\" alt=\"Snow\" style=\"width:50%;\">\n",
+    "<div class=\"slide title\"> Fig.2: DAGGER idea </div>"
    ]
   },
   {
@@ -1370,7 +1362,6 @@
     "output_initial_phase = policy_rollout_torcs_env(\n",
     "    driver_policy=trained_bc_policy,\n",
     "    advisor_policy=policy_expert,\n",
-    "    env_collected_quantities=\"angle\",\n",
     "    num_steps=NUM_STEPS,\n",
     ")"
    ]
@@ -1593,12 +1584,10 @@
    },
    "outputs": [],
    "source": [
-    "PATH_TO_DT_MODEL = \"../src/training_rl/offline_rl/data/decision_transformers/models/model_d4rl_walker2d-medium-v1_May_10_v0.pt\"\n",
-    "#PATH_TO_DT_MODEL = \\\n",
-    "#        \"../src/training_rl/offline_rl/data/decision_transformers/models/model_1000_ep_1000_steps_halfcheetah/model_d4rl_halfcheetah_medium_v0_April_24_v2.pt\"\n",
-    "ENV_NAME =  \"Walker2d-v3\" #\"HalfCheetah-v3\" \n",
-    "#DATASET_DT_PATH = \"../src/training_rl/offline_rl/data/decision_transformers/d4rl_data/halfcheetah-medium-v0.pkl\"\n",
-    "DATASET_DT_PATH = \"../src/training_rl/offline_rl/data/decision_transformers/d4rl_data/walker2d-medium-v1.pkl\"\n",
+    "PATH_TO_DT_MODEL = \\\n",
+    "        \"../src/training_rl/offline_rl/data/decision_transformers/models/model_d4rl_halfcheetah_medium_v0_April_24_v2.pt\"\n",
+    "ENV_NAME =  \"HalfCheetah-v3\"\n",
+    "DATASET_DT_PATH = \"../src/training_rl/offline_rl/data/decision_transformers/d4rl_data/halfcheetah-medium-v0.pkl\"\n",
     "RENDER_MODE = True"
    ]
   },
@@ -1715,14 +1704,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
-    "EVAL_RTG_TARGET = 500\n",
+    "EVAL_RTG_TARGET = 5000\n",
     "EVAL_RTG_SCALE = 1000\n",
     "\n",
     "    \n",
@@ -1758,8 +1747,8 @@
    },
    "outputs": [],
    "source": [
-    "NUM_STEPS_PER_EPISODE=4000\n",
-    "RENDER_RTG_TARGET = 600\n",
+    "NUM_STEPS_PER_EPISODE=2000\n",
+    "RENDER_RTG_TARGET = 4000\n",
     "EVAL_RTG_SCALE = 1000\n",
     "\n",
     "results = evaluate_on_env(\n",
@@ -1817,7 +1806,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "339.2px"
+    "width": "257.173px"
    },
    "toc_section_display": true,
    "toc_window_display": true
