--- a/notebooks/nb_94_Offline_RL_theory.ipynb
+++ b/notebooks/nb_94_Offline_RL_theory.ipynb
@@ -386,6 +386,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "env = gym.make(\"HalfCheetah-v4\", render_mode=\"rgb_array_list\")\n",
@@ -397,10 +399,7 @@
     "    num_frames=100,\n",
     "    fps=10,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -782,7 +781,6 @@
     "$$\n",
     "\\pi_\\theta (a|s) =\n",
     "\\arg\\max_{\\pi_\\theta} \\mathbb{\\sum}_{(s,a)\\sim D} \\left[ \\frac{1}{Z(s)} \\log \\pi_\\theta(a|s) \\exp\\left(\\frac{1}{\\lambda} A^{D}(s, a)\\right) \\right]\n",
-    "\\label{AWR}\n",
     "\\tag{6}\n",
     "$$"
    ]
@@ -904,19 +902,20 @@
    "source": [
     "## Batch Constrained deep Q-learning (BCQ) algorithm\n",
     "\n",
-    "The main idea is pictures in the figure below.\n",
+    "The main idea is pictured in the figure below.\n",
     "\n",
     "<img src=\"_static/images/97_BCQ_algo_1.png\" alt=\"offline_rl_4\" width=200%>\n",
     "<div class=\"slide title\"> Fig.5: BCQ approach to offline RL </div>\n",
     "\n",
-    "\n",
-    "In these methods, the policies  $\\pi$ and $\\pi_\\beta$ are not constrained by the $D_{KL}$ divergence, but we still ensure that $\\pi(s)$ generates similar actions to $\\pi_\\beta(s)$ through a generative model, in this case, a VAE. Therefore, this method falls under the direct policy constraint approach discussed earlier.\n",
+    "In BCQ, the policies $\\pi$ and $\\pi_\\beta$ are not constrained by the $D_{KL}$ divergence, but we still ensure that $\\pi(s)$ generates similar actions to $\\pi_\\beta(s)$ through a generative model, in this case, a Variational Autoencoder (VAE), $G_\\omega$: \n",
     "\n",
     "$$\n",
     "\\pi(s) = \\arg\\max_{a_i} Q_\\theta(s, a_i),\n",
     "\\\\ \\{a_i \\sim G_\\omega(s)\\}_{i=1}^n\n",
-    "\\tag{10}\n",
+    "\\tag{7}\n",
     "$$\n",
+    "\n",
+    "Therefore, this method falls under the direct policy constraint approach discussed earlier.\n",
     "\n",
     "The BCQ algorithm uses a clipped Double Deep Q-Learning (clipped-DDQ) approach to compute the Q-values:\n",
     "\n",
@@ -927,15 +926,14 @@
     "with\n",
     "\n",
     "$$\n",
-    "y(r,s') = r + \\gamma min_{i=1,2} Q_{\\theta_i, targ} (s', a'(s'))\n",
+    "y(r,s') = r + \\gamma max_{a_i} min_{i=1,2} Q_{\\theta_i, targ} (s', a_i)\n",
     "$$\n",
     "\n",
-    "The minimum is taken to avoid the overestimation of Q-values, an issue that also occurs in these kinds of methods in online RL. In offline RL, as we saw, o.o.d. actions are the ones that typically produce such overestimations. So, clipped-DDQ also introduces a control on this issue at the Q-value level, a similar effect that policy regularization methods aim to achieve with a lower bound on Q-values.\n",
-    "\n",
+    "The minimum is taken to avoid the overestimation of Q-values, an issue that also occurs in these kinds of methods in online RL. In offline RL, as we saw, o.o.d. actions are the ones that typically produce such overestimations. Therefore, clipped-DDQ also introduces control over this issue at the Q-value level, achieving a similar effect to what policy regularization methods aim for with a lower bound on Q-values.\n",
     "\n",
     "**A few technical details**:\n",
     "\n",
-    "The action in eq.10 are clipped with some noise $\\epsilon$ (hence the name clipped) as this also helps to avoid overestimation of Q-values:\n",
+    "The actions in eq. 7 are clipped with some noise $\\epsilon$, hence the name clipped, as this also helps to avoid overestimation of Q-values.\n",
     "\n",
     "$$\n",
     "a \\rightarrow clip [a + clip(\\epsilon, -c, c), a_{low}, a_{high}]\n",
@@ -943,10 +941,10 @@
     "\n",
     "We allow actions with high Q-values to introduce some uncertainty, helping the algorithm explore regions of lower reward to avoid overestimation effects.\n",
     "\n",
-    "Finally, as running a VAE during training can be computationally expensive, the algorithm introduces a perturbation model $\\xi_\\phi(s, a_i, \\Phi)$, which outputs an adjustment to an action $a$ in the range $[-\\Phi, \\Phi]$. Therefore, eq.10 becomes:\n",
+    "Finally, as running a VAE during training can be computationally expensive, the algorithm introduces a perturbation model $\\xi_\\phi(s, a_i, \\Phi)$, which outputs an adjustment to an action $a$ in the range $[-\\Phi, \\Phi]$. Therefore, eq.7 becomes:\n",
     "\n",
     "$$\n",
-    "\\pi(s) = \\arg\\max_{a_i + \\xi\\phi(s, a_i, \\Phi)} Q_\\theta(s, a_i + \\xi_\\phi(s, a_i, \\Phi)),\n",
+    "\\pi(s) = \\arg\\max_{a_i + \\xi_\\phi(s, a_i, \\Phi)} Q_\\theta(s, a_i + \\xi_\\phi(s, a_i, \\Phi)),\n",
     "\\\\ \\{a_i \\sim G_\\omega(s)\\}_{i=1}^n\n",
     "$$\n",
     "\n",
@@ -956,9 +954,7 @@
     "\n",
     "**Pros**: As it learns how to generate new actions not included in the dataset, it is suitable for small datasets and for unbalanced sets where a few unrepresented actions could be important for the task to be solved.\n",
     "\n",
-    "**cons**: As BCQ generates actions from a VAE, if the dataset used to train it underrepresents some important actions, it could be that the VAE is not able to generate meaningful actions around that state, making the discovery of new or unconventional actions difficult. This is one of the limitations of constrained policy approaches!\n",
-    "\n",
-    "Let's give a look to Tianshou BCQ policy."
+    "**Cons**:  Since BCQ generates actions from a VAE, if the dataset used to train it underrepresents some important actions, the VAE may struggle to generate meaningful actions around those states, making the discovery of new or unconventional actions difficult. This is one of the limitations of constrained policy approaches."
    ]
   },
   {
@@ -967,7 +963,7 @@
    "source": [
     "## Conservative Q-Learning (CQL) algorithm\n",
     "\n",
-    "CQL follows a pessimistic approach by considering a lower bound of the Q-value. In the paper they show that the solution of:\n",
+    "CQL follows a pessimistic approach by considering a lower bound of the Q-value. In the paper the authors shown that the solution of:\n",
     "\n",
     "$\\hat{Q}^{k+1}_{\\text{CQL}} \\gets \\hbox{argmin}_Q \\left[ \\color{red} {\\alpha\\big(\\mathbb{E}_{s \\sim \\mathcal{D}, a \\sim \\mu}[Q(s,a)] - \\mathbb{E}_{s,a \\sim \\mathcal{D}}[Q(s,a)]\\big)} + \\frac{1}{2} \\mathbb{E}_{s,a \\sim \\mathcal{D}} \\Big[\\big(Q(s,a) - \\mathcal{B}^{\\pi}Q(s,a)\\big)^2\\Big] \\right].$\n",
     "\n",
@@ -975,7 +971,8 @@
     "\n",
     "The nice thing about this method is that it can be applied to any Actor Critic method in a few lines of code.\n",
     "\n",
-    "CQL Focuses on **conservative value estimation** to provide lower bounds on the expected return of a policy. Aims to reduce overestimation bias and ensure that the policy remains within a safe region of the state-action space. Achieves safe exploration by constructing action sets that cover a broader range of state-action pairs. Well-suited for scenarios where safety is a top priority, as it **reduces the risk of catastrophic actions**.\n",
+    "CQL Focuses on **conservative value estimation** to provide lower bounds on the expected return of a policy. Aims to reduce overestimation bias and ensure that the policy remains within a safe region of the state-action space. Achieves safe exploration by constructing action sets that cover a broader range of state-action pairs. \n",
+    "Well suited for scenarios where safety is a top priority, as it **reduces the risk of catastrophic actions**.\n",
     "\n",
     "Note that BCQ could be better to discover novel actions and to use the collected data more efficiently but may not guarantee complete safety!."
    ]
@@ -1017,7 +1014,7 @@
     "$$L_\\pi(\\phi) = E_{(s,a)\\sim D} \\left[\\exp(\\beta(Q_{\\hat{\\theta}}(s, a) - V_{\\psi}(s))) \\log \\pi_{\\phi}(a|s)\\right]\n",
     "$$\n",
     "\n",
-    "similar to eq.7 . The lower bound used here is the 'expectile' shown in the figure below.\n",
+    "similar to eq.4 . The lower bound used here is the 'expectile' shown in the figure below.\n",
     "\n",
     "\n",
     "<img src=\"_static/images/96_expectile.png\" alt=\"offline_rl_4\" width=80%>\n",
@@ -1031,7 +1028,7 @@
    "source": [
     "## Q-Transformer\n",
     "\n",
-    "ToDo: Add theory and show results on blog."
+    "Adapts the bellman equations to deal with a transformer architecture: [paper](https://qtransformer.github.io/)"
    ]
   },
   {
@@ -1050,21 +1047,6 @@
     "[Peng et al. 2019 - Simple and Scalable Off-Policy Reinforcement Learning](https://arxiv.org/abs/1910.00177)\n",
     "\n",
     "[Nair et al. '2020 - AWAC: Accelerating Online Reinforcement Learning with Offline Datasets](https://arxiv.org/abs/2006.09359)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ToDo LIST: \n",
-    "\n",
-    "\n",
-    "ToDo: see Bootstrapping Error Accumulation Reduction (BEAR) and why is not the state of the art ?\n",
-    "\n",
-    "\n",
-    "Page 22 Levine: example of support constrain ---> Missing\n",
-    "\n",
-    "( TODO: See discussion in page 20 - Levine).\n"
    ]
   },
   {
