--- a/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
+++ b/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_latex_macros"
    ]
@@ -67,7 +260,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "register_grid_envs()\n",
     "\n",
-    "render_mode = RenderMode.RGB_ARRAY_LIST if os.environ.get(\"DISPLAY\") else None"
+    "render_mode = RenderMode.RGB_ARRAY_LIST"
    ]
   },
   {
@@ -205,6 +398,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
@@ -214,10 +409,7 @@
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_expert\"\n",
     "NUM_STEPS_II = 1000\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -253,12 +445,10 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "**Create single Minari dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "**Create single Minari dataset**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,6 +463,8 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
@@ -283,22 +475,19 @@
     "        combined_dataset_identifier = \"combined_data_sets_random_walk\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**check state-action distribution**"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Create Buffers with minari datasets\n",
@@ -312,22 +501,19 @@
     "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.3))\n",
     "\n",
     "snapshot_env(env)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**offline policy training**"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "POLICY_NAME = PolicyName.dqn\n",
@@ -340,13 +526,12 @@
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
     ")\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run the training\n",
@@ -366,31 +551,26 @@
     "    step_per_epoch=STEP_PER_EPOCH,\n",
     "    restore_training=False,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Results"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Restore policy**"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy_best_reward.pth\"\n",
@@ -402,10 +582,7 @@
     "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
     "policy.load_state_dict(torch.load(os.path.join(log_path, POLICY_FILE), map_location=\"cpu\"))\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -494,6 +671,7 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too,\n",
     "expert data ~ 30000).**\n",
@@ -501,13 +679,12 @@
     "Is the policy better? Why?\n",
     "\n",
     "Remove the walls and see what happens, i.e:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "env_2D_grid_initial_config.obstacles = ObstacleTypes.obst_free_8x8\n",
@@ -521,10 +698,7 @@
     "    num_frames=100,\n",
     "    imitation_policy_sampling=False\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
