--- a/notebooks/nb_92_Data_Collection.ipynb
+++ b/notebooks/nb_92_Data_Collection.ipynb
@@ -388,7 +388,7 @@
     "offpolicy_rendering(\n",
     "    env_or_env_name=env,\n",
     "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
-    "    behavior_policy_name=BehaviorPolicyType.random,\n",
+    "    behavior_policy_name=behavior_policy,\n",
     "    num_frames=100,\n",
     "    fps=10,\n",
     ")"
@@ -538,9 +538,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "training_rl",
    "language": "python",
-   "name": "python3"
+   "name": "training_rl"
   },
   "language_info": {
    "codemirror_mode": {
