--- a/notebooks/nb_96_Offline_rl_exercises.ipynb
+++ b/notebooks/nb_96_Offline_rl_exercises.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:31.749589Z",
@@ -292,7 +292,7 @@
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "register_grid_envs()\n",
-    "render_mode = RenderMode.RGB_ARRAY_LIST if os.environ.get(\"DISPLAY\") else None"
+    "render_mode = RenderMode.RGB_ARRAY_LIST"
    ]
   },
   {
@@ -366,11 +366,11 @@
     "**Similar to our approach in the off-policy notebook (nb_95), we will collect a small amount of expert data and a larger amount of suboptimal data. We will then observe how two offline RL algorithms introduced earlier, BCQ and CQL, can recover the expert policy without going o.o.d. We will compare our results with the imitation learning approach, specifically the BC algorithm, which, as we discussed in the imitation learning section (nb_93), is another viable option when expert data is available.**\n",
     "\n",
     "\n",
-    "In this exercise we will collect two datasets with expert and suboptimal data that tries to bring the agent from (3,0) to (0,7) .\n",
+    "In this exercise, we will collect two datasets: one with expert and another with suboptimal data. The goal of the agent will be to get as close as possible to the target.\n",
     "\n",
-    "I  - **Suboptimal expert policy**:  collect ~ 500 steps\n",
+    "I - **expert policy**: collect ~ 1000 steps\n",
     "\n",
-    "II - **expert policy**: collect ~ 100 steps"
+    "II  - **Suboptimal policy**:  collect ~ 2000 steps"
    ]
   },
   {
@@ -394,7 +394,7 @@
    },
    "outputs": [],
    "source": [
-    "obstacle_selected = widget_list([ObstacleTypes.obstacle_8x8_top_right, ObstacleTypes.obst_free_8x8])"
+    "obstacle_selected = widget_list([ObstacleTypes.obstacle_8x8_wall_with_door])"
    ]
   },
   {
@@ -411,7 +411,7 @@
     "\n",
     "# Grid configuration\n",
     "OBSTACLE = obstacle_selected.value\n",
-    "INITIAL_STATE = (7, 0)\n",
+    "INITIAL_STATE = (7, 7)\n",
     "FINAL_STATE = (0, 7)\n",
     "\n",
     "env_2D_grid_initial_config = Grid2DInitialConfig(\n",
@@ -456,13 +456,13 @@
    },
    "outputs": [],
    "source": [
-    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_move_up_from_bottom_twice\n",
-    "DATA_SET_IDENTIFIER_I = \"_suboptimal_for_offline_rl\"\n",
-    "NUM_STEPS_I = 500\n",
+    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_move_up_from_bottom_5_steps\n",
+    "DATA_SET_IDENTIFIER_I = \"_expert_\"\n",
+    "NUM_STEPS_I = 1000\n",
     "\n",
-    "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_suboptimal_determ_initial_3_0_final_3_7\n",
-    "DATA_SET_IDENTIFIER_II = \"_expert_for_offline_rl\"\n",
-    "NUM_STEPS_II = 100"
+    "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_move_left_with_noise\n",
+    "DATA_SET_IDENTIFIER_II = \"_suboptimal_\"\n",
+    "NUM_STEPS_II = 2000"
    ]
   },
   {
@@ -558,9 +558,22 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.01))\n",
+    "new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.01),\n",
+    "                        new_keys_for_state_action_count_plot=new_keys)\n",
     "\n",
     "snapshot_env(env)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data analysis\n",
+    "\n",
+    "Note that we have four peaks. The ones at (2,7) and (3,7) come from policy-I, which goes towards the target but stops before reaching it. The other two peaks at (6,0) and (7,0) are produced by policy-II, which drifts the agent to the left with noise. **It is important to notice that the amount of collected data at state (5,7) is very little, but this state is crucial if we want to approach the target.**\n",
+    "\n",
+    "What do you think a BC algorithm would do? What about an offline one?"
    ]
   },
   {
@@ -645,7 +658,7 @@
    },
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 10\n",
+    "NUM_EPOCHS = 5\n",
     "BATCH_SIZE = 128\n",
     "STEP_PER_EPOCH = 1.0*len_buffer\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -656,8 +669,15 @@
     "    policy_name=selected_offline_rl_policy.value,\n",
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "offline_training(\n",
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
@@ -688,7 +708,7 @@
    },
    "outputs": [],
    "source": [
-    "available_obstacles = [ObstacleTypes.obstacle_8x8_top_right, ObstacleTypes.obst_free_8x8]\n",
+    "available_obstacles = [ ObstacleTypes.obstacle_8x8_wall_with_door]\n",
     "selected_obstacle = widget_list(available_obstacles)"
    ]
   },
@@ -704,7 +724,7 @@
    "source": [
     "#SAVED_POLICY_NAME = \"policy_best_reward.pth\"\n",
     "SAVED_POLICY_NAME = \"policy.pth\"\n",
-    "INITIAL_STATE = (7, 0)\n",
+    "INITIAL_STATE = (7, 7)\n",
     "FINAL_STATE = (0, 7)\n",
     "\n",
     "offline_policy_config = TrainedPolicyConfig(\n",
@@ -730,7 +750,8 @@
     "    policy_model=policy,\n",
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=100,\n",
-    "    imitation_policy_sampling=False\n",
+    "    imitation_policy_sampling=False,\n",
+    "    inline=False\n",
     ")"
    ]
   },
@@ -746,13 +767,7 @@
     "\n",
     "**1 - Are BCQ and the CQL policies able to learn the expert data?**\n",
     "\n",
-    "**2 - As we saw before, imitation learning is a good option when you have expert data. How it compares with the offline algorithms?**\n",
-    "\n",
-    "**3 - Now rollout the three policies from o.o.d. data. What do you observe?**\n",
-    "\n",
-    "**4 - Remove the obstacle and do a rollout of the three policies. What do you observe?**\n",
-    "\n",
-    "**5 - Remove now the obstacle and use the combined dataset that includes a fair amount of suboptimal data. What do you notice?**"
+    "**2 - As we saw before, imitation learning is a good option when you have expert data. How it compares with the offline algorithms?**"
    ]
   },
   {
@@ -866,7 +881,7 @@
     "# Dataset I\n",
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_grid_deterministic_0_0_to_4_7\n",
     "DATA_SET_IDENTIFIER_I = \"_move_downwards\"\n",
-    "NUM_STEPS_I = 200\n",
+    "NUM_STEPS_I = 1000\n",
     "\n",
     "# Dataset II\n",
     "#BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
@@ -971,7 +986,8 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.03))\n",
+    "new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.03), new_keys_for_state_action_count_plot=new_keys)\n",
     "\n",
     "if \"start_0_0\" in selected_data_set.value:\n",
     "    env.set_starting_point((0,0))\n",
@@ -1031,10 +1047,6 @@
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
     ")\n",
-    "\n",
-    "#offline_policy_config.policy_config[\"unlikely_action_threshold\"]=0.6\n",
-    "#offline_policy_config.policy_config[\"min_q_weight\"]=15.0\n",
-    "#offline_policy_config.policy_config[\"num_quantiles\"]=5\n",
     "\n",
     "offline_training(\n",
     "    offline_policy_config=offline_policy_config,\n",
@@ -1105,11 +1117,9 @@
     }
    },
    "source": [
-    "**What do you observe? Try increasing the number of expert samples and run it again. What happens now?**\n",
+    "### Summary\n",
     "\n",
-    "**As we can see, the BCQ algorithm is able to stitch two trajectories together to create an optimal one.**\n",
-    "\n",
-    "**Now, trying to do the same with CQL and compare results.**"
+    "ToDo together."
    ]
   },
   {
@@ -1133,7 +1143,7 @@
    "source": [
     "Now, let's train a BCQ policy using the TORCS data from our previous DAGGER exercise.\n",
     "\n",
-    "Imitation learning failed to achieve autonomous driving, as it imitate the behavior policy that caused the car to crash after a few meters. Let's test if the BCQ algorithm can successfully navigate the entire race track.\n",
+    "Imitation learning failed to achieve autonomous driving, as it imitate the behavior policy that caused the car to crash after a few meters. Let's test if the BCQ algorithm is able to avoid the crash.\n",
     "\n",
     "Note that we won't be able to get results as good as DAGGER, as it not only introduced expert knowledge but also new states, which makes the problem much easier to solve. However access to human experts is quite rare in real problems."
    ]
@@ -1164,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:48.933903Z",
@@ -1174,22 +1184,7 @@
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56ee151303c9492ea37e96633a5b0c8c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(options=('torcs-data-v0',), value='torcs-data-v0')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "collected_datasets_names = [\"torcs-data-v0\"]\n",
     "collected_datasets = widget_list(collected_datasets_names)"
@@ -1208,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:50.941612Z",
@@ -1220,7 +1215,7 @@
    },
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 13\n",
+    "NUM_EPOCHS = 2\n",
     "BATCH_SIZE = 128\n",
     "NUMBER_TEST_ENVS = 1\n",
     "EXPLORATION_NOISE = True\n",
@@ -1246,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:53.384296Z",
@@ -1256,23 +1251,7 @@
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset /home/ivan/Documents/GIT_PROJECTS/tfl-training-rl/src/training_rl/offline_rl/data/offline_data/torcs-data-v0 downloaded. number of episodes: 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ivan/miniconda3/envs/training_rl/lib/python3.11/site-packages/gymnasium/spaces/box.py:130: UserWarning: \u001B[33mWARN: Box bound precision lowered by casting to float32\u001B[0m\n",
-      "  gym.logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "buffer_data = load_buffer_minari(DATA_SET_NOISY_NAME)\n",
     "data_config = MinariDatasetConfig.load_from_file(DATA_SET_NOISY_NAME)\n",
@@ -1297,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1329,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:57.758669Z",
@@ -1347,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:54:10.427826Z",
@@ -1387,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:52:15.100086Z",
@@ -1422,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1448,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1498,7 +1477,7 @@
    "source": [
     "## Exercise IV \n",
     "\n",
-    "Robotic hand: Homework."
+    "[AdroitHandPen-v1](https://minari.farama.org/datasets/pen/expert/)"
    ]
   },
   {
@@ -1548,9 +1527,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "training_rl",
    "language": "python",
-   "name": "python3"
+   "name": "training_rl"
   },
   "language_info": {
    "codemirror_mode": {
